# bvm

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
include/bvm/: bvm.h  bvm.hh  cli.hh  devicemapper.hh  disk.hh  slot.hh
lib/: CMakeLists.txt
src/: bvm.c  bvm.cc  bvm_bitmap.c  bvm_chapter.c  bvm_dev_mem.c  bvm_key.c  cli.cc  disk.cc  main.c  main.cc  slot.cc
tests/: main.c  main.cc  test_bvm_disk_sizes.cc  test_bvm_slot.cc  test_bvm_slot_create.cc  test_bvm_wipe.cc
